<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_mnsp_terminal_name"
        android:inputType="textCapWords"
        android:key="mnsp_terminal_name"
        android:minLength="10"
        android:maxLength="10"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mnsp_terminal_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_mnsp_sequence_number"
        android:inputType="textCapWords"
        android:key="mnsp_sequence_number"
        android:maxLines="1"
        android:maxLength="8"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mnsp_sequence_number" />

    <ListPreference
        android:defaultValue="@string/pref_default_mnsp_encrypt_types"
        android:entries="@array/pref_example_mnsp_encrypt_type_titles"
        android:entryValues="@array/pref_example_mnsp_encrypt_types"
        android:key="mnsp_encrypt_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_mnsp_encrypt_type" />

</PreferenceScreen>